# MassFlow

./: .gitignore  AI_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  dd-20251228.md  environment.yml  example_config.yaml  gemini.md  llms.txt  main.py  mypy.ini  notes.md  pyproject.toml  requirements.txt  verify_msp.py
.Jules/: palette.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
MassFlow/: __init__.py  cli.py  io.py  processing.py  similarity.py
archive/entropy_experiment/examples/: msdial_workflow.yaml
archive/entropy_experiment/scripts/: __init__.py  sync_examples.py
archive/entropy_experiment/splinters/workflows/: api_reference.md  overview.md  user_guide.md
archive/entropy_experiment/tests/: test_cli_entry.py  test_processing.py
archive/entropy_experiment/yogimass/: __init__.py  cli.py  config.py
archive/entropy_experiment/yogimass/filters/: __init__.py  metadata.py
config/: settings.yaml
data/raw/: unknown.MSP
data/reference/: GNPS-COLLECTIONS-MISC.msp  GNPS-COLLECTIONS-PESTICIDES-NEGATIVE.msp
docs/: architecture.md  demo_processing.ipynb  index.rst  library_schema.md
drafts/: CLI_design_guide.md  data_reduction.py  package__tree.txt  test.py  tree_snapshot_massflow_2025-01-20
drafts/docs/: architecture.md  changes.md
examples/: processing_workflow.yaml  real_workflow_template.yaml  simple_workflow.yaml
scripts/: benchmark_processing.py  example_workflow.py  run_metabolomics_demo.py
slab/: README.md  requirements.txt  slab_build_database.py  slab_fragment_search.py  slab_plot_msdial_spectra.py  slab_processing_pipeline.py
splinters/: README.md
splinters/workflows/data/: example_library.msp
splinters/workflows/docs/: index.rst
splinters/workflows/scripts/: benchmark_processing.py
splinters/workflows/tests/: test_config_validation.py  test_curation.py
splinters/workflows/yogimass/: cli.py  config.py
src/: cli.py  dataloader.py  engine.py  filters.py  processing.py  utils.py
src/MassFlow/: config.py  workflow.py
tests/: test_cli.py  test_config.py  test_config_validation.py  test_core.py  test_curation.py  test_end_to_end_mvp.py  test_imports.py  test_io.py  test_library_io.py  test_msdial.py  test_network_export.py  test_networking.py  test_pipeline.py  test_processing.py  test_processing_ux.py  test_processor_config.py  test_quickstart.py  test_scoring.py  test_similarity.py  test_workflow.py  unit_tests.py
tests/data/: simple.mgf  test_spectra.mgf
tests/data/msdial_small/: experiment_a.tsv
tests/unit/: test_skeleton.py
yogimass/: __init__.py  __main__.py  build_library_from_msp.py  cli.py  config.py  curation.py  formula_from_mz.py  io.py  library_io.py  msdial_fragment_search.py  pipeline.py  processing.py  quickstart.py  reporting.py  similarity.py  workflow.py  yogimass_buildDB.py  yogimass_logging.py  yogimass_pipeline.py
yogimass/deprecated/: build_library_from_msp.py  msdial_fragment_search.py  yogimass_buildDB.py
yogimass/filters/: metadata.py
yogimass/io/: __init__.py  mgf.py  msdial.py  msdial_clean_combine.py  msdial_process.py
yogimass/log/: how to import yogimass logging.md  logger_functions.py
yogimass/msdial/: MSDIAL_clean_combine.py  MSDIAL_process.py  __init__.py
yogimass/networking/: __init__.py  exporters.py  network.py
yogimass/scoring/: __init__.py  cosine.py
yogimass/similarity/: __init__.py  backends.py  batch.py  embeddings.py  library.py  metrics.py  processing.py  search.py
yogimass/utils/: __init__.py  chem-calc-tools.py  logging.py
(+30 files in other folders)
