[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yogimass"
version = "0.3.0"
description = "Spectrum processing defaults and similarity scoring for tandem MS/MS data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Eric Janusson" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Cheminformatics :: Mass Spectrometry",
]
dependencies = [
    "matchms>=0.23",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Optional feature extras: enable splinter functionality documented in README and code
# Examples: `pip install "yogimass[annoy]"` or `pip install "yogimass[msdial]"`.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

annoy = [
    "annoy>=1.17",
]

msdial = [
    "pandas>=1.5",
]

spec2vec = [
    "gensim>=4.2",
]

# Convenience groups
all = [
    "annoy>=1.17",
    "pandas>=1.5",
    "gensim>=4.2",
]

full = [
    "annoy>=1.17",
    "pandas>=1.5",
    "gensim>=4.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["yogimass*"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
