[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yogimass"
version = "0.1.0"
description = "Config-first LC-MS/MS spectral similarity toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Yogimass Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Cheminformatics :: Mass Spectrometry",
]
dependencies = [
    "matchms>=0.23",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# Planned extras for future weeks
annoy = [
    "annoy>=1.17",
]

msdial = [
    "pandas>=1.5",
]

spec2vec = [
    "gensim>=4.2",
]

all = [
    "annoy>=1.17",
    "pandas>=1.5",
    "gensim>=4.2",
]

[project.scripts]
yogimass = "yogimass.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["yogimass*"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
